--- a/roles/grafana/defaults/main.yml
+++ b/roles/grafana/defaults/main.yml
@@ -1,24 +1,20 @@
 ---
-grafana:
-  owner: www-data
-
-  git_url: https://github.com/torkelo/grafana.git
-  git_branch: master
-  root_path: /var/www/grafana
-  default_route: /dashboard/file/default.json
-  index: grafana-dash
-
-  elasticsearch_url: http://127.0.0.1:9200
-  graphite_url: http://127.0.0.1:8080
-
-  nginx_config_name: grafana.conf
-  nginx_config_path: /etc/nginx/sites-enabled
-  nginx_listen: 127.0.0.1
-  nginx_server_name: 127.0.0.1
-  nginx_access_log: false
-  nginx_error_log: false
-  nginx_enable_ssl: false
-  nginx_ssl_cert_path: ""
-  nginx_ssl_key_path: ""
-  #nginx_http_auth_file: false
-  nginx_htpasswd: false
+grafana_owner: www-data
+grafana_git_url: https://github.com/torkelo/grafana.git
+grafana_git_branch: master
+grafana_root_path: /var/www/grafana
+grafana_default_route: /dashboard/file/default.json
+grafana_index: grafana-dash
+grafana_elasticsearch_url: http://127.0.0.1:9200
+grafana_graphite_url: http://127.0.0.1:8080
+grafana_nginx_config_name: grafana.conf
+grafana_nginx_config_path: /etc/nginx/sites-enabled
+grafana_nginx_listen: 127.0.0.1
+grafana_nginx_server_name: 127.0.0.1
+grafana_nginx_access_log: false
+grafana_nginx_error_log: false
+grafana_nginx_htpasswd: false
+grafana_nginx_enable_ssl: false
+grafana_nginx_ssl_path: "/etc/nginx/ssl"
+grafana_nginx_ssl_cert: ""
+grafana_nginx_ssl_cert: ""
