--- a/roles/grafana/tasks/grafana_git.yml
+++ b/roles/grafana/tasks/grafana_git.yml
@@ -1,11 +1,11 @@
 ---
 - name: checkout grafana from git
-  git: repo={{ grafana.git_url }}
-       dest={{ grafana.root_path }}
-       version={{ grafana.git_branch }}
+  git: repo={{ grafana_git_url }}
+       dest={{ grafana_root_path }}
+       version={{ grafana_git_branch }}
        force=yes
        update=yes
   notify:
-    - rebuild grafana {{ grafana.root_path }}
+    - rebuild grafana {{ grafana_root_path }}
 - name: make dist dir
-  file: path={{ grafana.root_path }}/dist state=directory owner={{ grafana.owner }}
+  file: path={{ grafana_root_path }}/dist state=directory owner={{ grafana_owner }}
